syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

service UserService {
  rpc AddUser (User) returns (google.protobuf.Empty) {};
  rpc ChangePassword (ChangePasswordDto) returns (google.protobuf.Empty) {};

  rpc PatchTags (PatchTagsDto) returns (google.protobuf.Empty) {};
  rpc PatchEmail (PatchEmailDto) returns (google.protobuf.Empty) {};
  rpc PatchBio (PatchBioDto) returns (google.protobuf.Empty) {};

  rpc GetUserByEmail (GetUserByEmailDto) returns (User) {};
  rpc GetUserById (GetUserByIdDto) returns (User) {};
  rpc GetUsersByTag (GetUsersByTagDto) returns (UsersInformationForMail) {};
}

message User {
  string id = 1;
  string email = 2;
  string hashedPassword = 3;
  string salt = 4;
  string name = 5;
  string surname = 6;
  repeated string tags = 7;
}
message UserInformationForMail {
  string email = 1;
  string name = 2;
  string surname = 3;
}
message UsersInformationForMail {
  repeated UserInformationForMail users = 1;
}

message ChangePasswordDto {
  int32 userId = 1;
  string hashedPassword = 2;
  string salt = 3;
}
message PatchEmailDto {
  int32 userId = 1;
  string email = 2;
}
message PatchBioDto {
  int32 userId = 1;
  string name = 2;
  string surname = 3;
}
message PatchTagsDto {
  int32 userId = 1;
  repeated string tags = 2;
}

message GetUserByIdDto {
  int32 id = 1;
}
message GetUsersByTagDto {
  string tag = 1;
}
message GetUserByEmailDto {
  string email = 1;
}
